add an extra /ready endpoint
